# krttdkit

./: README.md  __init__.py  aes.yml  pyproject.toml
docs/: design_philosophy.md
krttdkit/: __init__.py
krttdkit/acquire/: GetGOES.py  __init__.py  abi.py  abi_desc.py  desis.py  gesdisc.py  get_goes.py  goes_info.py  grib_tools.py  grib_tools_bb.py  laads.py  modis.py  modis_rsrs.json  modis_rsrs.py  sbdart.py  sbdart_info.py  viirs.py
krttdkit/operate/: Recipe.py  __init__.py  abi_recipes.py  classify.py  enhance.py  geo_helpers.py  preprocess.py  recipe_book.py
krttdkit/products/: ABIL1b.py  CoordSystem.py  FeatureGrid.py  FireDetector.py  GeosGeom.py  HyperGrid.py  MOD021KM.py  PixelCat.py  TimeGrid.py  ZarrGrid.py  __init__.py  recipe_book.py
krttdkit/visualize/: TextFormat.py  __init__.py  geoplot.py  guitools.py
src/: ABIManager.py  ColoGrad.py  GeosGeometry.py  GridManager.py  RecipeBook.py  Spectrum.py  abi_helpers.py  abi_spec.py  geo_plot.py  get_aws.py  get_goes_hour.py  plot_spec.py
src/examples/: krttd_truecolor
src/examples/hw2/: get_grid.py  get_ian.py  get_ian_diff.py  get_ian_diff_old.py  get_pyroCb_Tb.py  get_pyroCb_red.py
src/examples/hw3/: make_airmass.py
src/examples/unformatted/: abi_helpers.py  geo_plot.py  make_truecolor.py  wind_vectors.py
src/unformatted/: ABIManager.py  ColoGrad.py
tests/: ABIL2.py  FeatureGridV2.py  abi_test.py  get_abi_range.py  get_heatmaps_aes770hw1.py  get_subgrid_aes770hw1.py  goes_search.py  krttd_mod021km.py  quick_abi.py
