# setuptools-driven build system per PEP 518
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krttdkit"
version = "0.0.1"
description = "gridded data tools"
dependencies = [
  "numpy>=1.23.5",
  #"cartopy",
  "imageio>=2.26.0",
  "matplotlib>=3.7.1",
  #"metpy",
  "netcdf4>=1.6.2",
  "opencv-python>=4.7.0",
  "pillow>=9.4.0",
  "pyhdf>=0.10.5",
  "boto>=2.49.0",
  "s3fs>=2013.4.0",
  "scipy>=1.11.1"
  "scikit-image>=0.20.0"
]

[tool.setuptools]
packages = [
    "krttdkit",
    "krttdkit.acquire",
    "krttdkit.operate",
    "krttdkit.products",
    "krttdkit.visualize"
    ]


